; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/rsym/extr_rsym.c_DbgHelpGetString.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/rsym/extr_rsym.c_DbgHelpGetString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.DbgHelpStringTab = type { i8*** }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @DbgHelpGetString(%struct.DbgHelpStringTab* %0, i32 %1) #0 {
  %3 = alloca %struct.DbgHelpStringTab*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.DbgHelpStringTab* %0, %struct.DbgHelpStringTab** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = ashr i32 %7, 10
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %4, align 4
  %10 = and i32 %9, 1023
  store i32 %10, i32* %6, align 4
  %11 = load %struct.DbgHelpStringTab*, %struct.DbgHelpStringTab** %3, align 8
  %12 = getelementptr inbounds %struct.DbgHelpStringTab, %struct.DbgHelpStringTab* %11, i32 0, i32 0
  %13 = load i8***, i8**** %12, align 8
  %14 = load i32, i32* %6, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i8**, i8*** %13, i64 %15
  %17 = load i8**, i8*** %16, align 8
  %18 = load i32, i32* %5, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i8*, i8** %17, i64 %19
  %21 = load i8*, i8** %20, align 8
  ret i8* %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
